# Adnans_NN

./: .gitignore  CMakeLists.txt  README.md  build.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
mnist-configs/: input.config
src/: config.hpp  main.cpp  mnist_loader.hpp  neural_network.hpp  read_image.hpp  read_label.hpp  tensor.hpp  utilities.hpp
